# video-noise-analyzer

./: Cargo.toml  README.md
src/: main copy.rs  main.rs
src/image_pipeline/: device_caps.rs  frame_handler.rs  gstreamer.rs  gui.rs  mod.rs  noise.rs
ui/: app-window.slint  components.slint  logic.slint  styles.slint  video-controls.slint  video-window.slint
