[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
futures = { version = "0.3.28" }
thiserror = "2.0.17"
v4l = "0.14"

gst = { package = "gstreamer", version = "0.23.0" }
gst-audio = { package = "gstreamer-audio", version = "0.23.0" }
gst-video = { package = "gstreamer-video", version = "0.23.0" }
gst-app = { package = "gstreamer-app", version = "0.23.0" }

[target.'cfg(target_os = "linux")'.dependencies]
gst-gl = { package = "gstreamer-gl", version = "0.23.0" }
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.23.0" }
glutin_egl_sys = "0.7.1"

[build-dependencies]
slint-build = "1.12.1"
